# journal-to-penpal-pipeline

./: .gitignore
desktop ver/: .gitignore  LICENSE-THIRD-PARTY.txt  README.md  README_DEV.md  SPRINT_FIX_drag_reorder.md  desktop-block-reorder-fix.md  index.html  journal-to-penpal-pipeline_llm.md  launch.bat  package-lock.json  package.json  second opinion pre-fix.md  tsconfig.json  vite.config.ts  walkthrough.md
desktop ver/omni-stream framework/: AGENT.md  CLAUDE GUIDING PHILOSOPHY.md
desktop ver/omni-stream framework/DOCUMENTATION STAGE/: 01_initialization.md  02_floodgate.md  03_crucible.md  04_anatomy.md  05_deep_research.md  06_spec_formalization.md  07_build_scaffold.md
desktop ver/omni-stream framework/IMPLEMENTATION STAGE/: 08_build_protocol.md  08a_pre_build_hardening.md  08b_mid_build_recovery.md  09_feature_audit_protocol.md  09a_retroactive_audit_protocol.md
desktop ver/src/: App.tsx
desktop ver/src-tauri/: Cargo.toml  tauri.conf.json
desktop ver/src-tauri/capabilities/: default.json
desktop ver/src-tauri/icons/: icon.icns
desktop ver/src-tauri/src/: db.rs  lib.rs  main.rs  state.rs
desktop ver/src-tauri/src/commands/: journal.rs  letter.rs  mod.rs  penpal.rs  workspace.rs
desktop ver/src-tauri/src/migrations/: 001_initial.sql
desktop ver/src-tauri/src/parser/: format1.rs  format2.rs  format3.rs  mod.rs
journal-penpal-web-version/: README.md  README_DEV.md  dispatch_end_to_end.py  email_to_devs.md  eslint.config.js  package-lock.json  package.json  social_pipeline_expansion.md
journal-penpal-web-version/src/: styles.css
(+149 files in other folders)
